<resources>
    <string name="app_name">Ref Customer </string>
    <string name="map_api_key">AIzaSyA5XgBptKhW7SYPcbvWFCbg0Wn0C3MReXQ</string>
    <string name="search_key">AIzaSyAeyMUJgKAhnNXbILHONb1um72CNzELFRY</string>
    <string name="field_req">Field required</string>
    <string name="login">Login</string>
    <string name="code">Code</string>
    <string name="user_phone">User Phone</string>
    <string name="are_you_have_account">Are You Have Account ?</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate this App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy Policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="type_a_message">Type a message...</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="refuse">Refuse</string>
    <string name="no_requests">No requests</string>
    <string name="req_refused">Your request refused</string>
    <string name="req_accepted">Your request accepted</string>
    <string name="no_conversation">No conversation</string>
    <string name="choose_language">Choose Language</string>
    <string name="next">next</string>
    <string name="year_of_birth">Year of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_year">Choose year</string>
    <string name="ok2">OK</string>
    <string name="done">done</string>
    <string name="verify">verify</string>
    <string name="language_settings">Language Settings</string>
    <string name="country_code">Country code</string>
    <string name="code_verification">Code verification</string>
    <string name="enter_code_sent_to">Enter code sent to</string>
    <string name="name">name</string>
    <string name="phone_number">phone number</string>
    <string name="resend_in">Resend in</string>
    <string name="resend">Resend</string>
    <string name="banner_image">banner image</string>
    <string name="profile_image">profile image</string>
    <string name="store">store</string>
    <string name="add">add</string>
    <string name="comments">Comments</string>
    <string name="orders">orders</string>
    <string name="add_comment">Add Comment</string>
    <string name="replay">Replay</string>
    <string name="add_replay">Add Replay</string>
    <string name="my_posts">My Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="help">Help</string>
    <string name="version_no">Version Number</string>
    <string name="the_ingredients">The Ingredients</string>
    <string name="specifications">Specifications</string>
    <string name="weight">Weight</string>
    <string name="colorss">Color</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="quantity">Quantity</string>
    <string name="cart">Cart</string>
    <string name="total">Total :</string>
    <string name="add_post">Add Post</string>
    <string name="post">post</string>
    <string name="add_place">Add Place</string>
    <string name="add_thing">Write something about this picture</string>
    <string name="notification_tone">Notification Tone</string>
    <string name="default1">Default</string>
    <string name="places">Places</string>
    <string name="pay">Pay</string>
    <string name="type_message">Type message</string>
    <string name="light">: Light</string>
    <string name="g">: 20 g</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="address">Address</string>
    <string name="offers">Offers</string>
    <string name="meal_title">Fried Chicken</string>
    <string name="meal_description">Fried chicken very good and nice fried chicken very good and nice</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="add_offer">Add Offer</string>
    <string name="offer_images">Offer Images</string>
    <string name="offer_name">Offer Name</string>
    <string name="offer_description">Offer Description</string>
    <string name="department">Department</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="not_found">Not Found</string>
    <string name="found">Found</string>
    <string name="discount_percentage">Discount Percentage</string>
    <string name="price_after_discount">Price After Discount</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="_200">200 SAR</string>
    <string name="details">Details</string>
    <string name="user_name_test">Ahmed Elmoselhy</string>
    <string name="order_details">Order Details</string>
    <string name="there_is_new_notification">There is new notification</string>
    <string name="expire_date">Expire date:</string>
    <string name="before_discount">Before</string>
    <string name="after_discount">After</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="product_update">Product update</string>
    <string name="download_family_app">Download Family app</string>
    <string name="download_delegate_app">Download Delegate app</string>
    <string name="time">Time</string>
    <string name="cash">Cash</string>
    <string name="payment">Payment :</string>
    <string name="order_accepted">Order accepted</string>
    <string name="order_id">Order id</string>
    <string name="order_will_be_ready">Order will be ready</string>
    <string name="family_make_order_ready">Family make order ready</string>
    <string name="the_request_is_being_submitted">The request is being submitted</string>
    <string name="we_deliver_your_request_to_a_delegate">We deliver your request to a delegate</string>
    <string name="the_delivery_was_successful">The delivery was successful</string>
    <string name="order_steps">Order steps</string>
    <string name="payment_1">Payment</string>
    <string name="name_on_card_optional">Name on card(optional)</string>
    <string name="mm">MM</string>
    <string name="card_number">Card number</string>
    <string name="yy">YY</string>
    <string name="refuse_reasons">Refuse Reasons</string>
    <string name="vacation">Vacation</string>
    <string name="short_time">Short Time</string>
    <string name="quantity_not_available">Quantity not available</string>
    <string name="another_reason">Another reason</string>
    <string name="refuse_confirm">Refuse Confirm</string>
    <string name="update_confirm">Update Confirm</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_1">Profile</string>
    <string name="productive_families">Productive families</string>
    <string name="markets">Markets</string>
    <string name="send_package">Send Package</string>
    <string name="order_number">Order number</string>
    <string name="method_of_payment">Method of payment</string>
    <string name="call_us_via_telegram">Call us via telegram</string>
    <string name="rate_us">Rate us</string>
    <string name="getting_location">Getting Location...</string>
    <string name="i_want_restaurant">I want restaurant,location,coffee...</string>
    <string name="sar">SAR</string>
    <string name="popular_around_you">Popular around you</string>
    <string name="most_wanted_service">Most wanted service</string>
    <string name="something">Check internet connection</string>
    <string name="km">Km</string>
    <string name="show">Show</string>
    <string name="home3">Home</string>
    <string name="work_hour_not_aval">Work Hour Not Available</string>
    <string name="open_now">Open</string>
    <string name="closed">Closed</string>
    <string name="shop_list">Shop List</string>
    <string name="your_location_near_you">Your location (near you)</string>
    <string name="results_for">Results for</string>
    <string name="filter">Filter</string>
    <string name="recent_search">Recent Search</string>
    <string name="clear_all">Clear All</string>
    <string name="can_t_find_any_shop_or_service_try_different_criteria">Can\'t find any shop or service, try different criteria</string>
    <string name="category">Category</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="apply">Apply</string>
    <string name="restaurants">Restaurants</string>
    <string name="supermarket">Supermarket</string>
    <string name="bakery">Bakery</string>
    <string name="cafe">Cafe</string>
    <string name="florist">Florist</string>
    <string name="library">Library</string>
    <string name="stores">Stores</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="paste_google_coordination">Paste google map URL or coordination</string>
    <string name="map">Map</string>
    <string name="hybrid">Hybrid</string>
    <string name="saved_location">Save Location</string>
    <string name="location_name">Location name</string>
    <string name="home2">Home</string>
    <string name="work">Work</string>
    <string name="save">Save</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="new_order">New Order</string>
    <string name="order_instruction">Order instructions</string>
    <string name="order_here">Order here</string>
    <string name="payment_type">Payment Type</string>
    <string name="coupons">Coupons</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="attach_photo_from">Attach photo from</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="want_to_get_the_latest_coupons">Want to get the latest coupons?</string>
    <string name="follow_us_on">follow us on</string>
    <string name="and1">and</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="add_more">Add More</string>
    <string name="user_found">User Found</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="write_package_details">Write Package Details</string>
    <string name="place_of_delivery">place of delivery</string>
</resources>