<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="lang"
            type="String" />

        <variable
            name="listener"
            type="com.refCustomerFamily.interfaces.Listeners.SignUpListener" />

        <variable
            name="model"
            type="com.refCustomerFamily.models.EditProfileModel" />
        <variable
            name="updateListener"
            type="com.refCustomerFamily.interfaces.Listeners.UpdateProfileListener" />

        <variable
            name="backListener"
            type="com.refCustomerFamily.interfaces.Listeners.BackListener"
            />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:src='@{lang.equals("ar")?@drawable/ic_right_arrow:@drawable/ic_left_arrow}'
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update_profile"
                        android:textColor="@color/gray12" />

                </LinearLayout>


            </androidx.appcompat.widget.Toolbar>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray4"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <FrameLayout
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                >

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true"
                    android:fitsSystemWindows="true"
                    tools:context=".activities_fragments.activity_signup.SignUpActivity"

                    >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">



                        <LinearLayout
                            android:id="@+id/ll"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            app:layout_constraintTop_toTopOf="parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"

                                android:orientation="horizontal"
                                android:padding="15dp">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"

                                    android:padding="5dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="10dp"
                                        android:layout_marginEnd="10dp"
                                        android:layout_gravity="center"
                                        android:singleLine="true"
                                        android:text="@string/profile_image"
                                        android:textColor="@color/gray11"
                                        android:textSize="13sp" />

                                    <androidx.cardview.widget.CardView
                                        android:id="@+id/flImage"
                                        android:layout_width="200dp"
                                        android:layout_height="120dp"
                                        android:layout_marginStart="5dp"
                                        android:layout_marginTop="5dp"
                                        android:layout_marginEnd="5dp"
                                        android:layout_marginBottom="5dp"
                                        android:layout_gravity="center"
                                        app:cardBackgroundColor="@color/white"
                                        app:cardCornerRadius="8dp"
                                        app:cardElevation="3dp">

                                        <ImageView
                                            android:id="@+id/imgLogo"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:clickable="false"
                                            android:longClickable="false"
                                            android:src="@drawable/user"
                                            app:civ_border_color="@color/white"
                                            app:civ_border_width="1dp"
                                            app:civ_circle_background_color="@color/white" />


                                    </androidx.cardview.widget.CardView>
                                </LinearLayout>

                            </LinearLayout>

                            <EditText
                                android:id="@+id/edtName"
                                error="@{model.error_name}"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="20dp"
                                android:background="@drawable/small_stroke_primary"
                                android:hint="@string/name"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:singleLine="true"
                                android:text="@={model.name}"
                                android:textColor="@color/black"
                                android:textColorHint="@color/gray12"
                                android:textSize="15sp" />


                            <EditText
                                error="@{model.error_email}"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginEnd="20dp"
                                android:background="@drawable/small_stroke_primary"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:singleLine="true"
                                android:text="@={model.email}"
                                android:textColor="@color/black"
                                android:textColorHint="@color/gray12"
                                android:textSize="15sp" />



                            <Button
                                android:id="@+id/btsignup"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="40dp"
                                android:layout_marginEnd="20dp"
                                android:layout_marginBottom="20dp"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:background="@drawable/small_rounded_primary"
                                android:onClick="@{()->updateListener.updateProfile()}"
                                android:text="@string/update_profile"
                                android:textColor="@color/white"
                                android:textSize="17sp" />


                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </ScrollView>

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/expandLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:background="@color/trans_black"
                    android:padding="16dp"
                    app:el_duration="800"
                    app:el_expanded="false"
                    app:el_parallax=".5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="vertical">

                        <FrameLayout
                            android:id="@+id/flGallery"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/white"
                            android:onClick="@{()->listener.checkReadPermission()}">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:clickable="false"
                                android:longClickable="false"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:padding="12dp"
                                    android:src="@drawable/ic_gallery"
                                    android:tint="@color/color1" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:text="@string/gallery"
                                    android:textColor="@color/color1"
                                    android:textSize="16sp" />
                            </LinearLayout>
                        </FrameLayout>

                        <FrameLayout
                            android:id="@+id/flCamera"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="5dp"
                            android:background="@color/white"
                            android:onClick="@{()->listener.checkCameraPermission()}"

                            >

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:clickable="false"
                                android:longClickable="false"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:padding="12dp"
                                    android:src="@drawable/ic_camera"
                                    android:tint="@color/colorPrimary" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:text="@string/camera"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="16sp" />
                            </LinearLayout>

                        </FrameLayout>

                        <Button
                            android:id="@+id/btnCancel"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="25dp"
                            android:background="@color/colorPrimary"
                            android:onClick="@{()->listener.closeSheet()}"
                            android:text="@string/cancel"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>


                </net.cachapa.expandablelayout.ExpandableLayout>

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>
